<resources>
    <string name="app_name">VIP KOREA</string>
    <string name="tab_home">Popular Service</string>
    <string name="tab_partners">Partner</string>
    <string name="tab_service">Service</string>
    <string name="tab_review">Review</string>
    <string name="tab_qna">Q&amp;A</string>
    <string name="EMPTY"></string>
    <string name="fab_restaurant">Dining</string>
    <string name="fab_fitncare">Fitness&amp;Care</string>
    <string name="text_service_title">The Need For This Service</string>
    <string name="text_service_subtitle1">1. A special service for overseas customers</string>
    <string name="text_service_subtitle2">2. Time-saving</string>
    <string name="text_service_subtitle3">3. Benefits of service</string>
    <string name="text_service_contents1">You can avoid any linguistic or cultural barriers by choosing a service company that has natural linguistic and cultural competencies.</string>
    <string name="text_service_contents2">While you want more than a certain level of service, it is difficult to verify each one since there are so many sources of information.
We have curated only places that can provide foreigners with a certain level of service, regardless of the cost.</string>
    <string name="text_service_contents3">An affiliated place will offer you favorable costs, reservations, and service. Receiving special treatment in a verified location will enhance the quality of the entire trip.</string>
    <string name="text_review_title1">In response to the question, I received a restaurant recommendation that was appropriate for my situation.</string>
    <string name="text_review_title2">It was important to me to have a unique experience in Korea instead of the obvious ones, and I received assistance with that task.</string>
    <string name="text_review_title3">The amount of information is overwhelming, making a choice can be overwhelming, but I managed to make a simple choice.</string>
    <string name="text_review_title4">It cannot be said that you can get the truth by going to the local area, but the closest you get to the truth is to go to the local area.</string>
    <string name="text_partner_title1">Blue Roof Town</string>
    <string name="text_partner_title2">HS-CLIINIC</string>
    <string name="text_partner_title3">JAMESKILL ZYM</string>
    <string name="text_partner_title4">Myeongdong Gyoja</string>
    <string name="text_partner_title5">FOTTON GARMENT</string>
    <string name="text_partner_title6">SPA BYUL</string>
    <string name="text_partner_title7">COCKTAIL BAR NOMAD</string>
    <string name="text_partner_title8">ID HOSPITAL</string>
    <string name="text_partner_title9">DA PLASTIC SURGERY</string>
    <string name="text_partner_title10">NANA PLASTIC SURGERY</string>
    <string name="text_partner_title11">MJ SKIN CLINIC</string>
    <string name="text_partner_subtitle1">This is an American Koreatown style restaurant. You can enjoy the taste of meat in a healthy way with special seasoning.</string>
    <string name="text_partner_subtitle2">This is the place to pursue natural beauty. Take care of your beauty safely through a delicate expert.</string>
    <string name="text_partner_subtitle3">This gym even takes care of the little things you need to work out. It keeps creating special events for our customers here, so stay tuned.</string>
    <string name="text_partner_subtitle4">Myeongdong Gyoja is a specialty restaurant of Kalguksu opened in 1966. I visited it because it was famous enough to appear in Michelin Guide, a world-famous food guidebook.</string>
    <string name="text_partner_subtitle5">FOTTON GARMENT is a premium tailored suit brand that contains four philosophies: customers, together, communication, and products.</string>
    <string name="text_partner_subtitle6">A wise choice for my body,Eliminate tired, uncomfortable spots and swelling at SPA BYUL Bring blood circulation and peace of mind and body together.</string>
    <string name="text_partner_subtitle7">Established in 2014 in a quiet residential area in Cheongdam-dong, Nomad sells more than 300 types of single malt whiskey, signature cocktails, gin, vodka, etc.</string>
    <string name="text_partner_subtitle8">The place of providing every moment of beauty, A place where the lifelong beauty doctor fills your hopes, Beauty Wonderland lives the life together with you.</string>
    <string name="text_partner_subtitle9">We have completed systematic collaboration and state-of-the-art facilities to provide medical services with high satisfaction to our customers.</string>
    <string name="text_partner_subtitle10">We constantly study and research about the aesthetics and update our surgical techniques to lead a worldwide plastic surgery trend.</string>
    <string name="text_partner_subtitle11">MJ Dermatology, which will become a beauty paradise in your passionate life</string>
    <string name="text_partner_url1">http://xn--ok0b996b7jax7rctf.com</string>
    <string name="text_partner_url2">http://www.clinic-hs.com</string>
    <string name="text_partner_url3">https://jameskill.modoo.at</string>
    <string name="text_partner_url4">http://www.mdkj.co.kr</string>
    <string name="text_partner_url5">https://www.fottongarment.co.kr</string>
    <string name="text_partner_url6">http://spabyul.com</string>
    <string name="text_partner_url7">http://nomad.visitus.co.kr</string>
    <string name="text_partner_url8">http://www.idhospital.com</string>
    <string name="text_partner_url9">http://www.daprs.com</string>
    <string name="text_partner_url10">https://www.nanaprs.com</string>
    <string name="text_partner_url11">http://www.mjskinclinic.com</string>
    <string name="text_qna_title1">1.Are all the places you recommend able to communicate in English?</string>
    <string name="text_qna_title2">2. Are there any benefits if I go through VIP KOREA?</string>
    <string name="text_qna_title3">3. Can I recommend some places?</string>
    <string name="text_qna_title4">4. Are there package products?</string>
    <string name="text_qna_title5">5. How to create a custom packaging experience?</string>
    <string name="text_qna_subtitle1">Yes, that\'s right. Basically, we recommend places where you can communicate in English. Other languages are also available at some vendors. Even if they are not fluent in the language, they know how to communicate with foreigners.</string>
    <string name="text_qna_subtitle2">All places do not have a set of benefits, but we are trying to increase the benefits gradually. When you visit these places, if you tell them that you came through VIP KOREA, you will be able to get a little more management.</string>
    <string name="text_qna_subtitle3">Of course it\'s possible. If you have experienced a service at a places in Korea you would recommend, please let us know. We will recommend it in our app and promote it to be affiliated.</string>
    <string name="text_qna_subtitle4">As of now, we are planning a package service that will allow you to experience satisfactory service evenly while increasing the number of affiliates. We will provide meals, beauty treatments, lodging, entertainment, and treatment services.</string>
    <string name="text_qna_subtitle5">Many elements must work in tandem when creating a well-designed branded packaging and unboxing experience, but you don’t have to include every available option.</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"ID or password do not match"</string>
</resources>