<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:contentDescription="LOGO"
        android:src="@drawable/logo3"
        android:onClick="onLogoClick"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        android:scaleType="fitStart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Welcome Chan"
        android:textStyle="bold"
        android:layout_marginRight="5dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/imageLogIn" />

    <ImageView
        android:id="@+id/imageLogIn"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:contentDescription="LOGO"
        android:src="@drawable/baseline_login_24"
        android:onClick="onLoginClick"
        android:layout_marginTop="15dp"
        android:layout_marginRight="5dp"
        android:scaleType="fitEnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageLogOut"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:contentDescription="LOGO"
        android:src="@drawable/baseline_logout"
        android:onClick="onLogoutClick"
        android:layout_marginTop="15dp"
        android:layout_marginRight="5dp"
        android:scaleType="fitEnd"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabs"
        app:layout_constraintTop_toBottomOf="@id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        app:tabIndicatorColor="@color/tab_selected"
        app:tabSelectedTextColor="@color/white"
        app:tabTextColor="@color/black"
        app:tabTextAppearance="@style/tab_text"
        app:tabBackground="@drawable/bg_tab_select"
        tools:layout_editor_absoluteY="108dp">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_partners" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_service" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_review" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_qna" />

    </com.google.android.material.tabs.TabLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1.5dp"
        android:background="@color/tab_selected"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        app:layout_constraintStart_toStartOf="@id/tabs"
        app:layout_constraintTop_toTopOf="@id/tabs"
        />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1.5dp"
        android:background="@color/tab_selected"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        app:layout_constraintBottom_toBottomOf="@id/tabs"
        app:layout_constraintTop_toBottomOf="@id/tabs"
        />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tabs"
        android:layout_width="match_parent"
        android:layout_height="0dp" >
    </androidx.viewpager2.widget.ViewPager2>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabRestaurant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:src="@drawable/ic_baseline_local_dining_24"
        android:background="@color/teal_700"
        app:fabSize="mini"
        app:layout_constraintTop_toTopOf="@id/fabMain"
        app:layout_constraintBottom_toBottomOf="@id/fabMain"
        app:layout_constraintStart_toStartOf="@id/fabMain"
        app:layout_constraintEnd_toEndOf="@id/fabMain"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabFitNCare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:src="@drawable/ic_baseline_fitness_center_24"
        app:fabSize="mini"
        app:layout_constraintTop_toTopOf="@id/fabMain"
        app:layout_constraintBottom_toBottomOf="@id/fabMain"
        app:layout_constraintStart_toStartOf="@id/fabMain"
        app:layout_constraintEnd_toEndOf="@id/fabMain"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@android:drawable/ic_input_add"
        android:layout_margin="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />



</androidx.constraintlayout.widget.ConstraintLayout>